Message notification opens new Activity

--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -186,4 +186,7 @@
     <string name="doNotConsentAlert">您若選取不願意參與研究計畫，代表您將不會參與研究後續內容，若您按下”我了解以上內容”，軟體將自動退出，且將無法完成軟體註冊；若您按下"取消"，軟體將會返回至上一步，並請重新選取”我願意參與研究計畫”，您將可以繼續註冊軟體帳號</string>
     <string name="i_understand_button_text">我了解以上內容</string>
     <string name="default_consent_form_text">本研究將大量收集躁症和鬱症患者與健康對照組的詳細臨床症狀表現資料，包含主觀性問卷、客觀式的數據收集(如配戴裝置Actigraphy數據)，和被動式的數據收集(如手機內建感測數據)等，取得客觀與主觀的大量臨床表徵數據，並進行前瞻式追蹤研究，了解病人在疾病病程中詳細表型數據的波動。利用上述方法收集的臨床數據，透過整合性的分析架構，將各層面的表徵以及數據整併為一預測平台，以預估病患的復發風險與發作類型症狀、治療效果和治療後的功能性表現等。期望此研究的結果能夠加速設立情緒疾患預後即時監控追蹤治療的基礎，在未來能夠在臨床上幫助醫護專業人員，提供病患更即時又適切的幫助。</string>
+
+    <!-- View Message Screen -->
+    <string name="title_activity_view_message">閱讀消息</string>
 </resources>
