--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -207,7 +207,7 @@
     <string name="run_wifi_log" translatable="false">Wifi Log</string>
     <string name="encrypt_ambient_audio_file" translatable="false">Encrypt and restart ambient audio recording</string>
     <string name="check_for_sms_enabled" translatable="false">Check SMS</string>
-    <string name="check_for_calls_enabled" translatable="false">Check Calls</string>
+    <string name="check_for_call_log_enabled" translatable="false">Check Calls</string>
     <string name="check_if_ambient_audio_recording_is_enabled" translatable="false">Check if ambient audio recording is enabled</string>
     <string name="fcm_upload" translatable="false">FCM Token send to server</string>
 
