refactor: add omniring timer
Signed-off-by: Reyva Babtista <reyvababtista16@gmail.com>
(cherry picked from commit c1311ab44f209e50ad4baadaabb8fc931bccc5a5)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -194,6 +194,8 @@
     <string name="turn_gyroscope_on" translatable="false">Gyroscope On</string>
     <string name="turn_bluetooth_off" translatable="false">Bluetooth OFF</string>
     <string name="turn_bluetooth_on" translatable="false">Bluetooth On</string>
+    <string name="turn_omniring_off" translatable="false">Omniring OFF</string>
+    <string name="turn_omniring_on" translatable="false">Omniring On</string>
     <string name="turn_gps_off" translatable="false">GPS OFF</string>
     <string name="turn_gps_on" translatable="false">GPS On</string>
     <string name="signout_intent" translatable="false">Signout</string>
